k8s/fraudbuster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraudbuster-service
  namespace: default
spec:
  selector:
    app: fraudbuster
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
